# LogReader

./: .gitignore  LogReader.code-workspace  README.md  classes.py  files.py  keywords.toml  lynis.txt  main.py  markdown.py  procedure.md  pyproject.toml  reader.py  sorter.py
full_logs/: alternatives.log.1  auth.log.1  btmp  btmp.1  daemon.log.1  debug.1  dpkg.log.1  kern.log.1  lastlog  mail.info  mail.log.1  mail.warn  mail.warn.1  messages  messages.1  php7.4-fpm.log.1  syslog  syslog.1  user.log.1  wtmp
full_logs/apt/: eipp.log.xz
full_logs/cron-apt/: lastfullmessage  log
full_logs/installer/: hardware-summary  lsb-release  partman  status  syslog
full_logs/nginx/: error.log.1  openmediavault-webgui_access.log.1  openmediavault-webgui_error.log.1
full_logs/proftpd/: proftpd.log.1
full_logs/samba/: log  log.7df9406dac91  log.nmbd.1  log.smbd  log.smbd.1
full_logs/user.log.2/: user.log.2
full_logs/user.log.3/: user.log.3
full_logs/user.log.4/: user.log.4
